force-app/main/default/objects/Configuration_Pricing__c/Configuration_Pricing__c.object-meta.xml
<CustomObject>
    <label>Configuration Pricing</label>
    <nameField>
        <label>Configuration Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>