force-app/main/default/objects/Configuration_Pricing__c/fields/Base_Disc_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Base_Disc_Price_Each__c</fullName>
    <label>Base Disc Price Each</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>