force-app/main/default/objects/Configuration_Pricing__c/fields/Rupture_Disc_or_Test_Price__c.field-meta.xml
<CustomField>
    <fullName>Rupture_Disc_or_Test_Price__c</fullName>
    <label>Rupture Disc or Top Section Price Each</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>